# Bear

./: CMakeLists.txt  Cargo.toml
libear_s/include/: CMakeLists.txt  environment.h  string_functions.h
libear_s/source/: CMakeLists.txt  ear.cc
libear_s/test/: CMakeLists.txt  ear_test.cc
src/: CMakeLists.txt  compilation.rs  lib.rs  main.rs  parameters.rs  trace.rs
src/libear/: CMakeLists.txt  ear.c  ear.cc
src/pear/: CMakeLists.txt  Result.h  main.cc
src/wrapper/: CMakeLists.txt  Result.h  main.c  main.c++  main.cc
tests/: trace_test.rs
