[package]
name = "bear"
version = "3.0.0"
authors = ["László Nagy <rizsotto at gmail dot com>"]
license = "GPL3"
description = "BuildEAR is a tool that generates a compilation database for clang tooling."

[[bin]]
name = "intercept-build"
path = "src/main.rs"

[[bin]]
name = "intercept-compiler"
path = "src/bin/wrapper.rs"

[lib]
name = "intercept"
crate-type = ["rlib"]
path = "src/lib.rs"

[dependencies]                                                                                            
serde = "1.0.15"                                                                                          
serde_derive = "1.0.15"                                                                                   
serde_json = "1.0.3"

[dependencies.clap]
version = "~2.26.0"
default-features = false
